# LinVClipBoard-by-DreamerX00-fork

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  plan.md
.claude/: settings.json
.github/workflows/: ci.yml
crates/clipctl/: Cargo.toml
crates/clipctl/src/: main.rs
crates/clipd/: Cargo.toml
crates/clipd/src/: dbus_service.rs  main.rs  monitor.rs  server.rs
crates/linvclip-ui/: index.html  package-lock.json  package.json
crates/linvclip-ui/src/: App.jsx  main.jsx  styles.css
crates/linvclip-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/linvclip-ui/src-tauri/capabilities/: default.json
crates/linvclip-ui/src-tauri/src/: lib.rs  main.rs
crates/linvclip-ui/src/components/: AppHeader.jsx  CheatSheet.jsx  ClipboardList.jsx  ConfirmDialog.jsx  ContextMenu.jsx  EmojiPicker.jsx  ErrorBoundary.jsx  FilterPills.jsx  Footer.jsx  GifPicker.jsx  LinkCard.jsx  PreviewPane.jsx  QrModal.jsx  SearchBar.jsx  SelectionBar.jsx  SettingsPanel.jsx  SnippetEditor.jsx  SnippetPicker.jsx  SnippetVarDialog.jsx  StatusBar.jsx  SymbolPicker.jsx  TabBar.jsx  UpdateModal.jsx
crates/linvclip-ui/src/contexts/: KeybindingContext.jsx
crates/linvclip-ui/src/data/: emojis.json  symbols.json
crates/linvclip-ui/src/hooks/: useZoom.js
crates/linvclip-ui/src/i18n/: en.json  hin.json  index.jsx  japanese.json  japnese.json  pt.json  ru.json
crates/linvclip-ui/src/utils/: smartDetect.js
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  db.rs  ipc.rs  lib.rs  migration.rs  models.rs
crates/shared/tests/: ipc_tests.rs
install/: clipd.service  install.sh  linvclip-update-check.service  linvclip-update-check.sh  linvclip-update-check.timer  linvclipboard-autostart.desktop  linvclipboard.desktop
packaging/: PKGBUILD  build-appimage.sh  build-deb.sh  linvclipboard.spec  postinst  prerm
upgrade-plan/: modify.md
