[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, database layer, and IPC protocol for LinVClipBoard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
libc = "0.2"
tokio = { version = "1", features = ["net", "io-util", "sync"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[dev-dependencies]
tempfile = "3"
