[package]
name = "linvclip-ui"
version = "1.4.1"
edition = "2021"

[lib]
name = "linvclip_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
shared = { path = "../../shared" }
base64 = "0.22"
arboard = { version = "3", features = ["wayland-data-control"] }
